--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,28 +8,41 @@
  <h3>Listing Tasks</h3>
  <ul>
  	<% @project.tasks.each do |task|%>
- 		<li><%= task.title%> - <%= task.due_date%> - <%= task.is_complete%></li>
+ 		<li><%= task.title%> - <%= task.due_date%> - <%= task.is_complete%>
+ 		</li>
  	<%end%>	
  </ul>
 
  <h3>Listing Overdue Tasks</h3>
  <ul>
  	<% @project.overdue.each do |task|%>
- 		<li><%= task.title%> - <%= task.due_date%> - <%= task.is_complete%></li>
+ 		<li><%= task.title%> - <%= task.due_date%> - <%= task.is_complete%>
+ 		<%= form_for task do |f|%>
+
+ 		<%= f.hidden_field :is_complete ,value: true%>
+ 		<%= f.submit "Mark as Complete"%>
+
+ 		<%end%>
+ 			<%#=link_to "Mark as Complete", tasks_mark_as_complete_path(task_id: task.id)%>
+		</li>
  	<%end%>	
  </ul>
 
  <h3>Listing Incomplete Tasks</h3>
  <ul>
  	<% @project.incomplete.each do |task|%>
- 		<li><%= task.title%> - <%= task.due_date%> - <%= task.is_complete%></li>
+ 		<li><%= task.title%> - <%= task.due_date%> - <%= task.is_complete%>
+ 			<%=link_to "Mark as Complete", tasks_mark_as_complete_path(task_id: task.id)%>
+ 		</li>
  	<%end%>	
  </ul>
 
  <h3>Listing Completed Tasks</h3>
  <ul>
  	<% @project.complete.each do |task|%>
- 		<li><%= task.title%> - <%= task.due_date%> - <%= task.is_complete%></li>
+ 		<li><%= task.title%> - <%= task.due_date%> - <%= task.is_complete%>
+ 			<%=link_to "Mark as Incomplete", tasks_mark_as_incomplete_path(task_id: task.id)%>
+ 		</li>
  	<%end%>	
  </ul>
 
