--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,5 +1,5 @@
 <h2><%=@client.name %></h2>
-
+<%= link_to "Export to Excel", clients_export_client_details_path(client_id: @client.id, format: "xls") %>
 <br>
 
 
