--- a/app/views/sandbox/zomato.html.erb
+++ b/app/views/sandbox/zomato.html.erb
@@ -1,164 +1,10 @@
-<% restaurant = JSON.parse('
-{
-  "R": {"res_id": 16774318},
-  "apikey": "bbaa7f2f778234292b1ace341832669b",
-  "id": "16774318",
-  "name": "Otto Enoteca & Pizzeria",
-  "url": "https://www.zomato.com/new-york-city/otto-enoteca-pizzeria-greenwich-village?utm_source=api_basic_user&utm_medium=api&utm_campaign=v2.1",
-  "location": {
-    "address": "5th Avenue 8th Street, New York, NY 10003",
-    "locality": "Greenwich Village",
-    "city": "New York City",
-    "city_id": 280,
-    "latitude": "40.7320138889",
-    "longitude": "-73.9961555556",
-    "zipcode": "10003",
-    "country_id": 216
-  },
-  "cuisines": "Pizza, Italian",
-  "average_cost_for_two": 60,
-  "price_range": 4,
-  "currency": "$",
-  "offers": [],
-  "thumb": "https://b.zmtcdn.com/data/pictures/8/16774318/758217fbcf5f93974f7fe6a6cc78b16e_featured_v2.jpg",
-  "user_rating": {
-    "aggregate_rating": "4.0",
-    "rating_text": "Very Good",
-    "rating_color": "5BA829",
-    "votes": "1067"
-  },
-  "photos_url": "https://www.zomato.com/new-york-city/otto-enoteca-pizzeria-greenwich-village/photos?utm_source=api_basic_user&utm_medium=api&utm_campaign=v2.1#tabtop",
-  "menu_url": "https://www.zomato.com/new-york-city/otto-enoteca-pizzeria-greenwich-village/menu?utm_source=api_basic_user&utm_medium=api&utm_campaign=v2.1&openSwipeBox=menu&showMinimal=1#tabtop",
-  "featured_image": "https://b.zmtcdn.com/data/pictures/8/16774318/758217fbcf5f93974f7fe6a6cc78b16e_featured_v2.jpg",
-  "has_online_delivery": 0,
-  "is_delivering_now": 0,
-  "deeplink": "zomato://restaurant/16774318",
-  "has_table_booking": 0,
-  "events_url": "https://www.zomato.com/new-york-city/otto-enoteca-pizzeria-greenwich-village/events#tabtop?utm_source=api_basic_user&utm_medium=api&utm_campaign=v2.1"
-}
-    ')
+
+res_id = 
+
+<% restaurant = HTTParty.get("https://developers.zomato.com/api/v2.1/restaurant?res_id=#{res_id}&apikey=7afbb7d97ebb773334d0d61ce8c4636a")
 %>
 
-<% reviews = JSON.parse('{
-  "reviews_count": 54,
-  "reviews_start": 0,
-  "reviews_shown": 5,
-  "user_reviews": [
-    {
-      "review": {
-        "rating": 3,
-        "review_text": "I definitely enjoy going back to Otto as I am a pizza lover. Lots of choices, and I think we tried them all. Some of the pizzas miss the mark by being \"too much\". For example, I had high hopes for the tellagio and mushroom pie but the tellagio overpowered the pizza completely and was too rich to enjoy! However, the simpler menu items are great. I love the frito misto mushroom appetizer! Very good. And the caponatina was amazing. The pastas are also great - the goat cheese agnolotti was my most r...",
-        "id": "25792145",
-        "rating_color": "CDD614",
-        "review_time_friendly": "11 months ago",
-        "rating_text": "Average",
-        "timestamp": 1450626201,
-        "likes": 0,
-        "user": {
-          "name": "ARB",
-          "zomato_handle": "arbny",
-          "foodie_level": "Connoisseur",
-          "foodie_level_num": 12,
-          "foodie_color": "e95151",
-          "profile_url": "https://www.zomato.com/arbny?utm_source=api_basic_user&utm_medium=api&utm_campaign=v2.1",
-          "profile_image": "https://b.zmtcdn.com/data/user_profile_pictures/37d/d960d45ec19b360df02b8117529d437d.jpg?fit=around%7C100%3A100&crop=100%3A100%3B%2A%2C%2A",
-          "profile_deeplink": "zomato://u/21244646"
-        },
-        "comments_count": 0
-      }
-    },
-    {
-      "review": {
-        "rating": 4,
-        "review_text": "Very very good.  Ordered bresaola, pasta carbonara and my son  ordered bucatini and they were all well prepared and delicious.  No picture this time as the pasta was consumed immediately.   We will return as soon as possible.",
-        "id": "24178784",
-        "rating_color": "5BA829",
-        "review_time_friendly": "Jul 04, 2015",
-        "rating_text": "Great!",
-        "timestamp": 1435961293,
-        "likes": 0,
-        "user": {
-          "name": "Paul D",
-          "foodie_level": "Big Foodie",
-          "foodie_level_num": 7,
-          "foodie_color": "ffae4f",
-          "profile_url": "https://www.zomato.com/users/paul-d-24568852?utm_source=api_basic_user&utm_medium=api&utm_campaign=v2.1",
-          "profile_image": "https://b.zmtcdn.com/data/user_profile_pictures/ed7/9fc82b36052a3c15b97037bf841d5ed7.jpg?fit=around%7C100%3A100&crop=100%3A100%3B%2A%2C%2A",
-          "profile_deeplink": "zomato://u/24568852"
-        },
-        "comments_count": 0
-      }
-    },
-    {
-      "review": {
-        "rating": 5,
-        "review_text": "Very reasonably priced staff was gracious and attentive. Food was very good. Kid friendly and large place very easy to get seating for for a family is 6.",
-        "id": "24135296",
-        "rating_color": "305D02",
-        "review_time_friendly": "Jun 29, 2015",
-        "rating_text": "Insane!",
-        "timestamp": 1435574906,
-        "likes": 0,
-        "user": {
-          "name": "6jgdad",
-          "foodie_level": "Big Foodie",
-          "foodie_level_num": 5,
-          "foodie_color": "ffae4f",
-          "profile_url": "https://www.zomato.com/users/6jgdad-24696100?utm_source=api_basic_user&utm_medium=api&utm_campaign=v2.1",
-          "profile_image": "https://b.zmtcdn.com/data/user_profile_pictures/129/61410f59f7bea6fa0e875f0b787de129.jpg?fit=around%7C100%3A100&crop=100%3A100%3B%2A%2C%2A",
-          "profile_deeplink": "zomato://u/24696100"
-        },
-        "comments_count": 0
-      }
-    },
-    {
-      "review": {
-        "rating": 4,
-        "review_text": "Great pizza, great price, great variety. Had the Carbonara (which is REAL Carbonara), Vongoli, Fennel, and the Lardo in the couple of visits I was able to make. Pizza was perfect every time and the Carbonara is great. I try to make it a stop each time Im in NYC.",
-        "id": "16773292",
-        "rating_color": "5BA829",
-        "review_time_friendly": "Jan 20, 2014",
-        "rating_text": "Great!",
-        "timestamp": 1390166389,
-        "likes": 0,
-        "user": {
-          "name": "Sheepy",
-          "zomato_handle": "sheepy",
-          "foodie_level": "Connoisseur",
-          "foodie_level_num": 12,
-          "foodie_color": "e95151",
-          "profile_url": "https://www.zomato.com/sheepy?utm_source=api_basic_user&utm_medium=api&utm_campaign=v2.1",
-          "profile_image": "https://b.zmtcdn.com/images/user_avatars/pizza_2x.png?fit=around%7C200%3A200&crop=200%3A200%3B%2A%2C%2A",
-          "profile_deeplink": "zomato://u/22263414"
-        },
-        "comments_count": 0
-      }
-    },
-    {
-      "review": {
-        "rating": 0,
-        "review_text": "Pizza was good but liked the fresh tasting octopus and cauliflower more.",
-        "id": "16773289",
-        "rating_color": "CBCBC8",
-        "review_time_friendly": "Jan 16, 2014",
-        "rating_text": "Not rated",
-        "timestamp": 1389824884,
-        "likes": 1,
-        "user": {
-          "name": "Christina Furtado",
-          "foodie_level": "Foodie",
-          "foodie_level_num": 1,
-          "foodie_color": "ffd35d",
-          "profile_url": "https://www.zomato.com/users/christina-furtado-23632976?utm_source=api_basic_user&utm_medium=api&utm_campaign=v2.1",
-          "profile_image": "https://b.zmtcdn.com/data/user_profile_pictures/c3e/058f86f673b4bf25532d132a67b5bc3e.jpg?fit=around%7C100%3A100&crop=100%3A100%3B%2A%2C%2A",
-          "profile_deeplink": "zomato://u/23632976"
-        },
-        "comments_count": 0
-      }
-    }
-  ],
-  "Respond to reviews via Zomato Dashboard": "https://www.zomato.com/business/claim?ref=rpg&resid=16774318#claim"
-}')%>
+<% reviews = HTTParty.get("https://developers.zomato.com/api/v2.1/reviews?res_id=#{res_id}&apikey=7afbb7d97ebb773334d0d61ce8c4636a")%>
 
 <br/>
 <h1><%= restaurant["name"] %></h1><br>
